# bonsol

./: .clippy.toml  .gitignore  .rustfmt.toml  2012-risc0-dev-mode.mdc  Cargo.toml  README.md  deny.toml
.cursor/rules/: 1000-rust-standards.mdc  1001-zkp-patterns.mdc  1002-rust-linter-rules.mdc  2000-typescript-schema.mdc
cli/src/: common.rs  execute.rs  main.rs  prove.rs
images/8bitoracle-iching/: Cargo.toml  input.json  input.json.20250315_092636.bak  read-hexagram.sh
images/8bitoracle-iching/scripts/: 01-build.sh  02-deploy.sh  03-generate-input-with-callback.sh  03-generate-input.sh  04-execute.sh  README.md  bonsol_exports.sh
images/8bitoracle-iching/src/: main.rs  utils.rs
node/src/risc0_runner/: mod.rs
node/src/transaction_sender/: mod.rs
onchain/8bitoracle-iching-callback/: Cargo.toml  README.md
onchain/8bitoracle-iching-callback/cli/init-storage/: Cargo.toml
onchain/8bitoracle-iching-callback/cli/init-storage/src/: main.rs
onchain/8bitoracle-iching-callback/scripts/: derive-pda.ts  generate-program-id.sh  package-lock.json  package.json  storage-keypair.json  test-execution-keypair.json  tsconfig.json
onchain/8bitoracle-iching-callback/src/: lib.rs
onchain/bonsol/: Cargo.toml  README.md
onchain/bonsol/src/: error.rs  program.rs  proof_handling.rs  utilities.rs
onchain/bonsol/src/actions/: claim.rs  status.rs
onchain/interface/: Cargo.toml
onchain/interface/src/: callback.rs
prover/src/: input_resolver.rs  prover.rs  util.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
tester/src/: main.rs
